Update business.html with new header, brand rename, and copy adjustments

--- a/business.html
+++ b/business.html
@@ -3,25 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>For Businesses – BizTrack.xrp</title>
+   <    <title>For Businesses – BizTrack</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-    <nav class="navbar">
-      <div class="logo">BizTrack.xrp</div>
-      <div>
-        <a href="index.html">Home</a>
-        <a href="business.html" class="active">For Businesses</a>
-        <a href="verify.html">Verify Product</a>
-        <a href="login.html">Login</a>
-        <a href="#" id="connectWalletLink">Connect Wallet</a>
-      </div>
-    </nav>
+  <bod    <header class="site-header">
+      <a class="brand" href="index.html" aria-label="BizTrack – Home">
+        <img class="brand_mark" src="assets/logo.svg" alt="">
+        <span class="brand_name">BizTrack</span>
+      </a>
+      <nav class="main-nav" aria-label="Primary">
+        <a class="nav_link" href="index.html">Home</a>
+        <a class="nav_link" href="business.html">For Businesses</a>
+        <a class="nav_link" href="verify.html">Verify Product</a>
+        <a class="nav_link" href="login.html">Login</a>
+        <a class="nav_link nav_link--accent" href="login.html#sign-up">Sign-up</a>
+      </nav>
+    </header>
 
-    <div style="max-width:960px; margin:2rem auto;">
+y>
+    <niv style="max-width:960px; margin:2rem auto;">
       <h2>Empower Your Supply Chain</h2>
       <p>
-        BizTrack.xrp enables any business to issue on‑chain product IDs,
+ BizTrack enables any business to issue on‑chain product IDs,
         generate QR codes and record supply chain events—without a centralized
         SaaS provider or onboarding process.
       </p>
