--- a/business.html
+++ b/business.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head>>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <    <title>For Businesses – BizTrack</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <bod    <header class="site-header">
-      <a class="brand" href="index.html" aria-label="BizTrack – Home">
-        <img class="brand_mark" src="assets/logo.svg" alt="">
-        <span class="brand_name">BizTrack</span>
-      </a>
-      <nav class="main-nav" aria-label="Primary">
-        <a class="nav_link" href="index.html">Home</a>
-        <a class="nav_link" href="business.html">For Businesses</a>
-        <a class="nav_link" href="verify.html">Verify Product</a>
-        <a class="nav_link" href="login.html">Login</a>
-        <a class="nav_link nav_link--accent" href="login.html#sign-up">Sign-up</a>
-      </nav>
-    </header>
+ <body>
+  <header class="site-header">
+    <a class="brand" href="index.html" aria-label="BizTrack – Home">
+      <img class="brand_mark" src="assets/logo.svg" alt="">
+      <span class="brand_name">BizTrack</span>
+    </a>
+    <nav class="main-nav" aria-label="Primary">
+      <a class="nav_link" href="index.html">Home</a>
+      <a class="nav_link" href="business.html">For Businesses</a>
+      <a class="nav_link" href="verify.html">Verify Product</a>
+      <a class="nav_link" href="login.html">Login</a>
+      <a class="nav_link nav_link--accent" href="login.html#sign-up">Sign-up</a>
+    </nav>
+  </header> </header>
 
 y>
     <niv style="max-width:960px; margin:2rem auto;">
