--- a/verify.html
+++ b/verify.html
@@ -3,24 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Verify Product – BizTrack.xrp</title>
+    <title>Verify Product – BizTrack</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="logo">BizTrack.xrp</div>
-      <div>
-        <a href="index.html">Home</a>
-        <a href="business.html">For Businesses</a>
-        <a href="verify.html" class="active">Verify Product</a>
-        <a href="login.html">Login</a>
-        <a href="#" id="connectWalletLink">Connect Wallet</a>
-      </div>
-    </nav>
-
-    <div style="max-width:800px; margin:2rem auto; text-align:center;">
-      <h2>Verify a Product’s Authenticity</h2>
-      <p>
+   <header class="site-header">
+  <a class="brand" href="index.html" aria-label="BizTrack – Home">
+    <img class="brand_mark" src="assets/logo.svg" alt="">
+    <span class="brand_name">BizTrack</span>
+  </a>
+  <nav class="main-nav" aria-label="Primary">
+    <a class="nav_link" href="index.html">Home</a>
+    <a class="nav_link" href="business.html">For Businesses</a>
+    <a class="nav_link" href="verify.html">Verify Product</a>
+    <a class="nav_link" href="login.html">Login</a>
+    <a class="nav_link nav_link--accent" href="login.html#sign-up">Sign-up</a>
+  </nav>
+</header>
         Enter the product ID or scan the QR code to retrieve the on‑chain record
         of a product. You'll be shown its history, authenticity and
         sustainability metrics.
