Update verify.html: new header and nav

--- a/verify.html
+++ b/verify.html
@@ -10,15 +10,13 @@
    <header class="site-header">
   <a class="brand" href="index.html" aria-label="BizTrack – Home">
     <img class="brand_mark" src="assets/logo.svg" alt="">
-    <span class="brand_name">BizTrack</span>
-  </a>
-  <nav class="main-nav" aria-label="Primary">
+   <nav class="main-nav" aria-label="Primary">
     <a class="nav_link" href="index.html">Home</a>
     <a class="nav_link" href="business.html">For Businesses</a>
     <a class="nav_link" href="verify.html">Verify Product</a>
     <a class="nav_link" href="login.html">Login</a>
     <a class="nav_link nav_link--accent" href="login.html#sign-up">Sign-up</a>
-  </nav>
+</nav>av>>/nav>
 </header>
         Enter the product ID or scan the QR code to retrieve the on‑chain record
         of a product. You'll be shown its history, authenticity and
