Rebrand business page: update logo, remove Connect Wallet, Login -> Login/Signup, update BizTrack text

--- a/business.html
+++ b/business.html
@@ -1,63 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>For Businesses – BizTrack.xrp</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <nav class="navbar">
-      <div class="logo">BizTrack.xrp</div>
-      <div>
-        <a href="index.html">Home</a>
-        <a href="business.html" class="active">For Businesses</a>
-        <a href="verify.html">Verify Product</a>
-        <a href="login.html">Login</a>
-        <a href="#" id="connectWalletLink">Connect Wallet</a>
-      </div>
-    </nav>
-
-    <div style="max-width:960px; margin:2rem auto;">
-      <h2>Empower Your Supply Chain</h2>
-      <p>
-        BizTrack.xrp enables any business to issue on‑chain product IDs,
-        generate QR codes and record supply chain events—without a centralized
-        SaaS provider or onboarding process.
-      </p>
-      <h3>Create a Product ID</h3>
-      <ol>
-        <li>Connect wallet: Use an XRPL‑compatible wallet (Xaman, GemWallet, Ledger) to connect to our dApp.</li>
-        <li>Enter details: Provide the product name, SKU and batch number, plus optional metadata like origin or certifications.</li>
-        <li>Mint token: A smart contract mints a unique on‑chain ID (NFT or token) representing the physical item.</li>
-        <li>Download QR code: Print or embed the QR code on your product packaging to link customers to the blockchain record.</li>
-      </ol>
-      <div style="margin-top:2rem;">
-        <h3>Generate a QR Code</h3>
-        <p>This demo form illustrates the product creation workflow.</p>
-        <div class="form-group">
-          <label for="prodName">Product Name</label>
-          <input id="prodName" type="text" />
-        </div>
-        <div class="form-group">
-          <label for="sku">SKU</label>
-          <input id="sku" type="text" />
-        </div>
-        <div class="form-group">
-          <label for="batch">Batch Number</label>
-          <input id="batch" type="text" />
-        </div>
-        <div class="form-group">
-          <label for="metadata">Optional Metadata</label>
-          <input id="metadata" type="text" />
-        </div>
-        <button class="btn" id="generateQRBtn">Generate QR</button>
-        <p id="qrMsg" style="color:#c00; margin-top:0.5rem;"></p>
-      </div>
-      <div id="qrOutput" class="qr-code" style="display:none;"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>For Businesses – BizTrack</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <nav class="navbar">
+    <div class="logo"><a href="index.html"><img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe.png" alt="BizTrack logo" style="height:1.5em;margin-right:0.5em;vertical-align:middle;">BizTrack</a></div>
+    <div>
+      <a href="index.html">Home</a>
+      <a href="business.html" class="active">For Businesses</a>
+      <a href="verify.html">Verify Product</a>
+      <a href="login.html">Login/Signup</a>
     </div>
-
-    <script src="js/business.js"></script>
-    <script src="js/wallet.js"></script>
-  </body>
+  </nav>
+  <div style="max-width:960px; margin:2rem auto;">
+    <h2>Empower Your Supply Chain</h2>
+    <p>
+      BizTrack enables any business to issue on‑chain product IDs,
+      generate QR codes and record supply chain events—without a centralized
+      SaaS provider or onboarding process.
+    </p>
+    <h3>Create a Product ID</h3>
+    <ol>
+      <li>Connect wallet: Use an XRPL‑compatible wallet (Xaman, GemWallet, Ledger) to connect to our dApp.</li>
+      <li>Enter details: Provide the product name, SKU and batch number, plus optional metadata like origin or certifications.</li>
+      <li>Mint token: A smart contract mints a unique on‑chain ID (NFT or token) representing the physical item.</li>
+      <li>Download QR code: Print or embed the QR code on your product packaging to link customers to the blockchain record.</li>
+    </ol>
+    <div style="margin-top:2rem;">
+      <h3>Generate a QR Code</h3>
+      <p>This demo form illustrates the product creation workflow.</p>
+      <div class="form-group">
+        <label for="prodName">Product Name</label>
+        <input id="prodName" type="text" />
+      </div>
+      <div class="form-group">
+        <label for="sku">SKU</label>
+        <input id="sku" type="text" />
+      </div>
+      <div class="form-group">
+        <label for="batch">Batch Number</label>
+        <input id="batch" type="text" />
+      </div>
+      <div class="form-group">
+        <label for="metadata">Optional Metadata</label>
+        <input id="metadata" type="text" />
+      </div>
+      <button class="btn" id="generateQRBtn">Generate QR</button>
+      <p id="qrMsg" style="color:#c00; margin-top:0.5rem;"></p>
+    </div>
+    <div id="qrOutput" class="qr-code" style="display:none;"></div>
+  </div>
+  <script src="js/business.js"></script>
+  <script src="js/wallet.js"></script>
+</body>
 </html>
