UI refresh: update navbar with logo and BizTrack brand, remove Connect Wallet, update width

--- a/index.html
+++ b/index.html
@@ -16,7 +16,33 @@
       <a href="verify.html">Verify Product</a>
       <a href="login.html">Login/Signup</a>
     </div>
-  </nav>
+  </n11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+31
+32
+33
+34
+35
+36
+av>
 
   <!-- Hero section -->
   <section style="padding: 2rem; text-align: center;">
@@ -32,7 +58,7 @@
 
   <!-- Feature highlights -->
   <section style="padding: 2rem; background-color: #f5f8fc;">
-    <div style="max-width: 960px; margin: 0 auto;">
+    <div class>="content"
       <h2>Why BizTrack?</h2>
       <p>
         Each product is assigned a unique identifier stored on the XRP Ledger. QR codes link the physical item to its blockchain record, enabling secure, tamper-proof tracking.
