--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Navigation bar visible on every page -->
   <nav class="navbar">
-    <div class="logo"><a href="index.html"><img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe.png" alt="BizTrack" style="height:1.5em;margin-right:0.3em;vertical-align:middle;">BizTrack</a></div>
+    <div class="logo"><a href="index.html"><img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe.png" alt="" style="height:1.5em;margin-right:0.3em;vertical-align:middle;">BizTrack</a></div>
     <div>
       <a href="index.html">Home</a>
       <a href="business.html">For Businesses</a>
@@ -51,6 +51,7 @@ av>
       Issue unique product IDs, track events, and verify authenticity with QR codes - no central onboarding required.
     </p>
     <div style="margin-top: 1.5rem;">
+      
       <a href="business.html" class="btn">Get Started</a>
       <a href="verify.html" class="btn btn-secondary">Verify Product</a>
     </div>
@@ -75,8 +76,10 @@ av>
   <!-- Footer -->
   <footer style="margin-top: auto; padding: 1rem; text-align: center; background-color: #003366; color: #ffffff;">
     &copy; 2025 BizTrack - Built for decentralized product tracking.
+    
   </footer>
 
   <script src="js/wallet.js"></script>
 </body>
 </html>
+
