--- a/index.html
+++ b/index.html
@@ -9,40 +9,14 @@
 <body>
   <!-- Navigation bar visible on every page -->
   <nav class="navbar">
-    <div class="logo"><a href="index.html"><img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe.png" alt="" style="height:1.5em;margin-right:0.3em;vertical-align:middle;">BizTrack</a></div>
+    <div class="logo"><a href="index.html"><img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe.png" alt="BizTrack" style="height:1.5em;margin-right:0.3em;vertical-align:middle;">BizTrack</a></div>
     <div>
       <a href="index.html">Home</a>
       <a href="business.html">For Businesses</a>
       <a href="verify.html">Verify Product</a>
       <a href="login.html">Login/Signup</a>
     </div>
-  </n11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-29
-30
-31
-32
-33
-34
-35
-36
-av>
+  </nav>
 
   <!-- Hero section -->
   <section style="padding: 2rem; text-align: center;">
@@ -51,7 +25,6 @@ av>
       Issue unique product IDs, track events, and verify authenticity with QR codes - no central onboarding required.
     </p>
     <div style="margin-top: 1.5rem;">
-      
       <a href="business.html" class="btn">Get Started</a>
       <a href="verify.html" class="btn btn-secondary">Verify Product</a>
     </div>
@@ -59,7 +32,7 @@ av>
 
   <!-- Feature highlights -->
   <section style="padding: 2rem; background-color: #f5f8fc;">
-    <div class>="content"
+    <div style="max-width: 960px; margin: 0 auto;">
       <h2>Why BizTrack?</h2>
       <p>
         Each product is assigned a unique identifier stored on the XRP Ledger. QR codes link the physical item to its blockchain record, enabling secure, tamper-proof tracking.
@@ -76,10 +49,8 @@ av>
   <!-- Footer -->
   <footer style="margin-top: auto; padding: 1rem; text-align: center; background-color: #003366; color: #ffffff;">
     &copy; 2025 BizTrack - Built for decentralized product tracking.
-    
   </footer>
 
   <script src="js/wallet.js"></script>
 </body>
 </html>
-
