Enlarge logo and remove text in index nav bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
   <!-- Navigation bar visible on every page -->
   <nav class="navbar">
-    <div class="logo"><a href="index.html"><img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe.png" alt="BizTrack" style="height:1.5em;margin-right:0.3em;vertical-align:middle;">BizTrack</a></div>
+    <div class="logo">
+  <a href="index.html">
+    <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack" style="height:3em;vertical-align:middle;">
+</div>
     <div>
       <a href="index.html">Home</a>
       <a href="business.html">For Businesses</a>
