--- a/business.html
+++ b/business.html
@@ -8,7 +8,11 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo"><a href="index.html"><img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe.png" alt="BizTrack logo" style="height:1.5em;margin-right:0.5em;vertical-align:middle;">BizTrack</a></div>
+<div class="logo">
+  <a href="index.html">
+    <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack" style="height:3em;vertical-align:middle;">
+  </a>
+n
     <div>
       <a href="index.html">Home</a>
       <a href="business.html" class="active">For Businesses</a>
