--- a/login.html
+++ b/login.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="logo">BizTrack.xrp</div>
+      <div class="logo">
+    <a href="index.html">
+        <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack" style="height:3em;vertical-align:middle;">
+    </a>
+</div>
       <div>
         <a href="index.html">Home</a>
         <a href="business.html">For Businesses</a>
