Replace logo with text link in verify nav

--- a/verify.html
+++ b/verify.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="logo">BizTrack.xrp</div>
+<<div class="logo"><a href="index.html">BizTrack</a></div>
       <div>
         <a href="index.html">Home</a>
         <a href="business.html">For Businesses</a>
