--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <body>
   <!-- Navigation bar visible on every page -->
   <nav class="navbar">
-    <div class="logo">
-  <a href="index.html">
-    <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack" style="height:3em;vertical-align:middle;">
-</div>
-    <div>
-      <a href="index.html">Home</a>
+        <div class="logo">
+      <a href="index.html">BizTrack</a>
+    </div>
+      <div>
+  <a href="index.html">Home</a>
       <a href="business.html">For Businesses</a>
       <a href="verify.html">Verify Product</a>
       <a href="login.html">Login/Signup</a>
