Use logo image in navbar on index page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <!-- Navigation bar visible on every page -->
   <nav class="navbar">
         <div class="logo">
-      <a href="index.html">BizTrack</a>
+            <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack" style="display:inline-block;height:3em;vertical-align:middle;">
+
     </div>
       <div>
   <a href="index.html">Home</a>
