Use logo image in business page navbar

--- a/business.html
+++ b/business.html
@@ -9,10 +9,9 @@
 <body>
   <nav class="navbar">
 <div class="logo">
-  <a href="index.html">
+ >
     <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack" style="height:3em;vertical-align:middle;">
-  </a>
-n
+  </div>
     <div>
       <a href="index.html">Home</a>
       <a href="business.html" class="active">For Businesses</a>
